--- a/index.html
+++ b/index.html
@@ -126,11 +126,15 @@
 				<div class="col-6">
 					<div class="about-wrap">
 						<h3>who are you</h3>
-						<div class="servise">
-							<img src="img/about/1.png">
+						<div class="service">
+							<div class="service-wrap-img">
+								<img src="img/about/1.png">
+							</div>
 						</div>
 						<div class="servise">
-							<img src="img/about/2.png">
+							<div class="service-wrap-img">
+								<img src="img/about/2.png">
+							</div>
 						</div>
 					</div>
 				</div>
