--- a/index.html
+++ b/index.html
@@ -123,26 +123,85 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-6">
+				<div class="col-12 col-lg-6">
 					<div class="about-wrap">
 						<h3>who are you</h3>
 						<div class="service">
-							<div class="service-wrap-img">
-								<img src="img/about/1.png">
+							<div class="service__wrap-img">
+								<div class="rotate-block">
+									<img src="img/about/1.png">
+								</div>
+							</div>
+							<div class="service__description">
+								<h3>customer first</h3>
+								<p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec odio et ante tinc unt tempus  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec</p>
 							</div>
 						</div>
-						<div class="servise">
-							<div class="service-wrap-img">
-								<img src="img/about/2.png">
+						<div class="service">
+							<div class="service__wrap-img">
+								<div class="rotate-block">
+									<img src="img/about/2.png">
+								</div>
+							</div>
+							<div class="service__description">
+								<h3>quality first</h3>
+								<p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec odio et ante tinc unt tempus  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-12 col-lg-6">
 					<div class="about-wrap">
 						<h3>our skill</h3>
+						<div class="skill">
+							<ul>
+								<li>
+									<div class="skill__text">html5</div>
+									<div class="skill__bg">
+										<div class="skill__bg__percent html5"></div>
+									</div>
+								</li>
+								<li>
+									<div class="skill__text">css3</div>
+									<div class="skill__bg">
+										<div class="skill__bg__percent css3"></div>
+									</div>
+								</li>
+								<li>
+									<div class="skill__text">jquery</div>
+									<div class="skill__bg">
+										<div class="skill__bg__percent jquery"></div>
+									</div>
+								</li>
+								<li>
+									<div class="skill__text">javascript</div>
+									<div class="skill__bg">
+										<div class="skill__bg__percent javascript"></div>
+									</div>
+								</li>
+								<li>
+									<div class="skill__text">php</div>
+									<div class="skill__bg">
+										<div class="skill__bg__percent php"></div>
+									</div>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="s-gray">
+		<div class="container">
+			<div class="row title-section">
+				<div class="col-12">
+					<h1>Services</h1>
+				</div>
+			</div>
+			<div class="row">
+
 			</div>
 		</div>
 	</section>
