--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-	
+
 	<header class="head bg" style="background-image: url(img/bg.jpeg);">
 		<div class="top-menu">
 			<div class="container">
@@ -36,31 +36,43 @@
 					<div class="col-12 col-lg-2 order-lg-2">
 						<div class="wrap-hex-head">
 							<div class="hex-top">
-								
+
 							</div>
 						</div>
 					</div>
 					<div class="d-none d-lg-block col-lg-5 order-lg-1">
 						<nav class="main-mnu">
 							<ul>
-								<li><a href="#">home</a></li>
-								<li><a href="#">about</a></li>
-								<li><a href="#">service</a></li>
+								<li>
+									<a href="#">home</a>
+								</li>
+								<li>
+									<a href="#">about</a>
+								</li>
+								<li>
+									<a href="#">service</a>
+								</li>
 							</ul>
 						</nav>
 					</div>
 					<div class="d-none d-lg-block col-lg-5 order-lg-3">
 						<nav class="main-mnu">
 							<ul>
-								<li><a href="#">work</a></li>
-								<li><a href="#">subscribe</a></li>
-								<li><a href="#">contact</a></li>
+								<li>
+									<a href="#">work</a>
+								</li>
+								<li>
+									<a href="#">subscribe</a>
+								</li>
+								<li>
+									<a href="#">contact</a>
+								</li>
 							</ul>
 						</nav>
 					</div>
 				</div>
 			</div>
-		</div>		
+		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
@@ -73,36 +85,36 @@
 				<div class="half-hex">
 					<div class="hex-wrap">
 						<svg class="color-fill" version="1.1">
-								<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
-								</polygon>
-								<div class="number days">365</div>
-								<div class="number-text text-days">days</div>
+							<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
+							</polygon>
+							<div class="number days">365</div>
+							<div class="number-text text-days">days</div>
 						</svg>
 					</div>
 					<div class="hex-wrap">
 						<svg class="color-fill" version="1.1">
-								<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
-									<div class="number hous">12</div>
-									<div class="number-text text-hous">hous</div>
-								</polygon>
+							<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
+								<div class="number hous">12</div>
+								<div class="number-text text-hous">hous</div>
+							</polygon>
 						</svg>
 					</div>
 				</div>
 				<div class="half-hex">
 					<div class="hex-wrap">
 						<svg class="color-fill" version="1.1">
-								<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
-									<div class="number mins">55</div>
-									<div class="number-text text-mins">mins</div>
-								</polygon>
+							<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
+								<div class="number mins">55</div>
+								<div class="number-text text-mins">mins</div>
+							</polygon>
 						</svg>
 					</div>
 					<div class="hex-wrap">
 						<svg class="color-fill" version="1.1">
-								<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
-									<div class="number secs">01</div>
-									<div class="number-text text-secs">secs</div>
-								</polygon>
+							<polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20" fill="transparent">
+								<div class="number secs">01</div>
+								<div class="number-text text-secs">secs</div>
+							</polygon>
 						</svg>
 					</div>
 				</div>
@@ -110,7 +122,7 @@
 		</div>
 		<div class="scrol">
 			<div class="scrol__line">
-				
+
 			</div>
 		</div>
 	</header>
@@ -134,7 +146,9 @@
 							</div>
 							<div class="service__description">
 								<h3>customer first</h3>
-								<p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec odio et ante tinc unt tempus  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec</p>
+								<p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante.
+									Maecenas nec odio et ante tinc unt tempus Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero
+									ace venenatis faucibus. Nullam quis ante. Maecenas nec</p>
 							</div>
 						</div>
 						<div class="service">
@@ -145,7 +159,9 @@
 							</div>
 							<div class="service__description">
 								<h3>quality first</h3>
-								<p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec odio et ante tinc unt tempus  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante. Maecenas nec</p>
+								<p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero ace venenatis faucibus. Nullam quis ante.
+									Maecenas nec odio et ante tinc unt tempus Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero
+									ace venenatis faucibus. Nullam quis ante. Maecenas nec</p>
 							</div>
 						</div>
 					</div>
@@ -193,19 +209,60 @@
 		</div>
 	</section>
 
-	<section class="s-gray">
+	<section class=" s-about s-gray">
 		<div class="container">
 			<div class="row title-section">
 				<div class="col-12">
 					<h1>Services</h1>
 				</div>
 			</div>
-			<div class="row">
-
+			<div class="row about">
+				<div class="col-12 col-md-4">
+					<div class="about-item">
+						<div class="about-item-logo">
+							<div class="a-hexagon">
+								<div class="logo">l</div>
+							</div>
+						</div>
+						<div class="about-item-description">
+							<h3>branding & positioning</h3>
+							<p>Understanding who you are and what you want is our strategy for your brand. We are always figuring out ways to capture
+								your vision, so people can get on board.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<div class="about-item">
+						<div class="about-item-logo">
+							<div class="a-hexagon">
+								<div class="logo">E</div>
+							</div>
+						</div>
+						<div class="about-item-description">
+							<h3>web design & development</h3>
+							<p>Understanding who you are and what you want is our strategy for your brand. We are always figuring out ways to capture
+								your vision, so people can get on board.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<div class="about-item">
+						<div class="about-item-logo">
+							<div class="a-hexagon">
+								<div class="logo">[</div>
+							</div>
+						</div>
+						<div class="about-item-description">
+							<h3>photogprahy</h3>
+							<p>Understanding who you are and what you want is our strategy for your brand. We are always figuring out ways to capture
+								your vision, so people can get on board.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
-	
+
 	<div class="mobile-menu d-block d-lg-none">
 		<div class="hamburger hamburger--emphatic">
 			<div class="hamburger-box">
@@ -214,18 +271,31 @@
 		</div>
 		<div class="hidden-mnu">
 			<ul>
-				<li><a href="#">home</a></li>
-				<li><a href="#">about</a></li>
-				<li><a href="#">service</a></li>
-				<li><a href="#">work</a></li>
-				<li><a href="#">subscribe</a></li>
-				<li><a href="#">contact</a></li>
+				<li>
+					<a href="#">home</a>
+				</li>
+				<li>
+					<a href="#">about</a>
+				</li>
+				<li>
+					<a href="#">service</a>
+				</li>
+				<li>
+					<a href="#">work</a>
+				</li>
+				<li>
+					<a href="#">subscribe</a>
+				</li>
+				<li>
+					<a href="#">contact</a>
+				</li>
 			</ul>
 		</div>
 	</div>
-	
+
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 
 </body>
+
 </html>
