--- a/index.html
+++ b/index.html
@@ -263,6 +263,100 @@
 		</div>
 	</section>
 
+	<section class="s-ask">
+		<div class="container">
+			<div class="row title-section">
+				<div class="col-12">
+					<h1>faq</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<ul class="list">
+						<li class="ask">Price</li>
+						<li class="que">Question Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis itaque voluptate modi ratione. Inventore
+							fugit temporibus explicabo modi, a deleniti veniam odit, rerum adipisci mollitia, sequi porro nihil fugiat. Ducimus!</li>
+						<li class="ask">Question Lorem ipsum</li>
+						<li class="que">Question Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis itaque voluptate modi ratione. Inventore
+							fugit temporibus explicabo modi, a deleniti veniam odit, rerum adipisci mollitia, sequi porro nihil fugiat. Ducimus!</li>
+						<li class="ask">explicabo modi</li>
+						<li class="que">Question Lorem ipsum dolor Question Lorem ipsum adipisicing elit. Perferendis itaque voluptate modi ratione. Inventore
+							fugit temporibus explicabo modi, a deleniti veniam odit, rerum adipisci mollitia, sequi porro nihil fugiat. Ducimus!</li>
+						<li class="ask">sit amet consectetur adipisicing elit</li>
+						<li class="que">Question Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut id officiis neque totam vero debitis labore facilis
+							unde maiores adipisci repellendus sit aperiam, iure consequuntur explicabo enim commodi rerum dolorem?</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="s-work s-dark">
+		<div class="container">
+			<div class="row title-section">
+				<div class="col-12">
+					<h1>works</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="owl-carousel owl-work">
+					<div class="owl-work__wrap">
+						<div class="owl-work__img">
+							<img class="img-responsive" src="img/work/1.jpg">
+							<div class="owl-work__hover">
+								<div class="owl-work__hex owl-work__hex_top">
+									<a href="#">#</a>
+								</div>
+								<div class="owl-work__hex owl-work__hex_bottom">
+									<a href="#">8</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="owl-work__wrap">
+						<div class="owl-work__img">
+							<img class="img-responsive" src="img/work/3.jpg">
+							<div class="owl-work__hover">
+								<div class="owl-work__hex owl-work__hex_top">
+									<a href="#">#</a>
+								</div>
+								<div class="owl-work__hex owl-work__hex_bottom">
+									<a href="#">8</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="owl-work__wrap">
+						<div class="owl-work__img">
+							<img class="img-responsive" src="img/work/2.jpg">
+							<div class="owl-work__hover">
+								<div class="owl-work__hex owl-work__hex_top">
+									<a href="#">#</a>
+								</div>
+								<div class="owl-work__hex owl-work__hex_bottom">
+									<a href="#">8</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="owl-work__wrap">
+						<div class="owl-work__img">
+							<img class="img-responsive" src="img/work/3.jpg">
+							<div class="owl-work__hover">
+								<div class="owl-work__hex owl-work__hex_top">
+									<a href="#">#</a>
+								</div>
+								<div class="owl-work__hex owl-work__hex_bottom">
+									<a href="#">8</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<div class="mobile-menu d-block d-lg-none">
 		<div class="hamburger hamburger--emphatic">
 			<div class="hamburger-box">
@@ -294,6 +388,10 @@
 	</div>
 
 	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk"
+	  crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P"
+	  crossorigin="anonymous">
 	<script src="js/scripts.min.js"></script>
 
 </body>
