--- a/index.html
+++ b/index.html
@@ -357,6 +357,24 @@
 		</div>
 	</section>
 
+	<section class="s-subscribe s-gray">
+		<div class="container">
+			<div class="row title-section">
+				<div class="col-12">
+					<h1>subscribe</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<form class="subscribe-form">
+						<input class="subscribe-form__email" type="email" placeholder="E-mail">
+						<button class="subscribe-form__btn" type="submit">&</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<div class="mobile-menu d-block d-lg-none">
 		<div class="hamburger hamburger--emphatic">
 			<div class="hamburger-box">
