--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 				<div class="col-12">
 					<form class="subscribe-form">
 						<input class="subscribe-form__email" type="email" placeholder="E-mail">
-						<button class="subscribe-form__btn" type="submit">&</button>
+						<button class="subscribe-btn subscribe-form__btn" type="submit">&</button>
 					</form>
 				</div>
 			</div>
