--- a/index.html
+++ b/index.html
@@ -367,13 +367,114 @@
 			<div class="row">
 				<div class="col-12">
 					<form class="subscribe-form">
-						<input class="subscribe-form__email" type="email" placeholder="E-mail">
-						<button class="subscribe-btn subscribe-form__btn" type="submit">&</button>
+						<input class="subscribe-form__email" type="email" placeholder="E-mail" required>
+						<button class="btn subscribe-form__btn" type="submit">&</button>
 					</form>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<section class="s-contact" style="background-image: url(img/bg-foot.png)">
+		<div class="container">
+			<div class="row title-section">
+				<div class="col-12">
+					<h1>contact us</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<form class="contact-form">
+						<div class="contact-form__wrap">
+							<div class="contact-form__grid">
+								<div class="contact-form__inner">
+									<input class="contact-form__input contact-form__name" type="text" name="" id="" required placeholder="Name">
+									<div class="btn contact-form__btn">n</div>
+								</div>
+								<div class="contact-form__inner">
+									<input class="contact-form__input contact-form__url" type="url" name="" id="" required placeholder="Website">
+									<div class="btn contact-form__btn">&#xe028;</div>
+								</div>
+							</div>
+							<div class="contact-form__grid">
+								<div class="contact-form__inner">
+									<input class="contact-form__input contact-form__enail" type="email" name="" id="" required placeholder="Email">
+									<div class="btn contact-form__btn">&</div>
+								</div>
+								<div class="contact-form__inner">
+									<input class="contact-form__input contact-form__subject" type="text" name="" id="" required placeholder="Subject">
+									<div class="btn contact-form__btn">`</div>
+								</div>
+							</div>
+						</div>
+						<div class="contact-form__wrap">
+							<textarea class="contact-form__textarea" name="" id="" required placeholder="Text"></textarea>
+							<button type="submit" class="btn contact-form__submit">send</button>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="social">
+						<div class="social__grid">
+							<div class="social__item">
+								<div class="social__hex">
+									<a href="#">
+										<i class="fab fa-twitter"></i>
+									</a>
+								</div>
+							</div>
+							<div class="social__item">
+								<div class="social__hex">
+									<a href="#">
+										<i class="fab fa-google-plus-g"></i>
+									</a>
+								</div>
+							</div>
+							<div class="social__item">
+								<div class="social__hex">
+									<a href="#">
+										<i class="fab fa-facebook-f"></i>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="social__grid">
+							<div class="social__item">
+								<div class="social__hex">
+									<a href="#">
+										<i class="fab fa-linkedin-in"></i>
+									</a>
+								</div>
+							</div>
+							<div class="social__item">
+								<div class="social__hex">
+									<a href="#">
+										<i class="fab fa-behance"></i>
+									</a>
+								</div>
+							</div>
+							<div class="social__item">
+								<div class="social__hex">
+									<a href="#">
+										<i class="fab fa-github"></i>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="foot">
+		<div class="foot__text">
+			©2018 ASBE
+			<span class="foot__red">hex</span>
+		</div>
+	</footer>
 
 	<div class="mobile-menu d-block d-lg-none">
 		<div class="hamburger hamburger--emphatic">
@@ -407,9 +508,9 @@
 
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk"
-	  crossorigin="anonymous">
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P"
-	  crossorigin="anonymous">
+	 crossorigin="anonymous">
 	<script src="js/scripts.min.js"></script>
 
 </body>
